browser/css/jsdialogs.css
/* ... */
/* Expander */

.jsdialog.ui-linkbutton,
.jsdialog.ui-expander {
	box-shadow: 0 1px 0px 0 var(--color-border-lighter);
	background-color: transparent;
	border: none;
}

.ui-expander.jsdialog:not(.sidebar) {
	width: 100%;
	text-align: left;
	font-size: 14px;
	padding-bottom: 4px;
}

#options.ui-expander {
	margin-top: 8px;
}

.ui-expander-heading {
	margin: 0;
	padding: 0;
	font: inherit;
	display: contents;
}

.ui-expander-label {
	color: #666;
}

.ui-expander-label.jsdialog {
	font-family: var(--cool-font);
}

.ui-expander-label::before,
.ui-treeview-expandable.collapsed > div > .ui-treeview-expander::before,
.ui-treeview div[aria-expanded='false'] > div > .ui-treeview-expander::before {
	display: inline-block;
	content: 'V';
	color: transparent;
	margin-inline-end: 7px;
	background: transparent url('images/lc_menu_chevron.svg') no-repeat center right;
	filter: brightness(0.5);
}

.ui-expander-label.expanded::before,
.ui-treeview-expandable:not(.collapsed) > div > .ui-treeview-expander::before,
.ui-treeview div[aria-expanded='true'] > div > .ui-treeview-expander::before {
	content: 'V';
	color: transparent;
	margin-inline-end: 7px;
	transform: rotate(90deg);
	background: transparent url('images/lc_menu_chevron.svg') no-repeat center;
	filter: brightness(0.5);
}

[data-theme='dark'] .ui-expander-label::before,
[data-theme='dark'] .ui-treeview-expandable > div > .ui-treeview-expander::before,
[data-theme='dark'] .ui-treeview div[aria-expanded] > div > .ui-treeview-expander::before {
	filter: brightness(1);
}

.ui-treeview-expandable > div > .ui-treeview-expander::before,
.ui-treeview div[aria-expanded] > div > .ui-treeview-expander::before {
	margin-inline-end: 7px !important;
	display: inline-block;
	position: relative !important;
	cursor: pointer;
}

.ui-treeview-header-sort-icon::after {
	content: '\25BC';
	margin-inline-start: 7px;
	display: none;
}

.ui-treeview-header-sort-icon.up::after {
	transform: rotate(180deg);
	display: inline-block;
}

.ui-treeview-header-sort-icon.down::after {
	display: inline-block;
}

.ui-treeview-header-button {
	background: none;
	border: none;
	font: inherit;
	font-weight: bold;
	cursor: pointer;
}

.ui-treeview-icon {
	height: var(--btn-img-size-s);
	width: var(--btn-img-size-s);
	margin-inline-end: 8px;
	vertical-align: middle;
}

.ui-expander-label.expanded {
	padding-left: 14px; /*adding extra padding to account for image absolute position*/
	color: #444;
}

.ui-expander-content.expanded {
	display: block;
}

.ui-expander-content:not(.expanded) {
	display: none;
}

.ui-expander:hover {
	cursor: pointer;
}

.ui-expander-content > .root-container.jsdialog {
	margin: var(--spacing-s);
}

/* Link Button*/

.ui-linkbutton {
	color: var(--color-text-dark) !important;
}

.ui-linkbutton:hover {
	cursor: pointer;
	color: var(--color-text-lighter) !important;
}

/* TreeView */

.ui-treeview {
	display: grid;
	grid-template-columns: repeat(1, auto);
	border: 1px solid var(--color-border);
	border-radius: var(--border-radius);
	overflow-y: auto;
	overflow-x: hidden;
	max-width: 1000px;
	min-width: 150px;
	min-height: 100px;
	padding: 1px;
	padding-inline-end: 3px;
	color: var(--color-main-text);
	font-size: var(--default-font-size);
	line-height: var(--default-height);
	align-content: start;
	justify-content: stretch;
	scrollbar-width: var(--scrollbar-width);
	scrollbar-color: var(--scrollbar-color);
}

.ui-treeview:has(> .ui-treeview-search-container) {
	padding-top: 0;
	/* otherwise position: sticky will leave a gap. We can't top: -1 on the search container or it'll scroll... */
}

.ui-treeview-search-container {
	/* we're using position: sticky at all since as we don't want to nest this in
		 another div and we don't want to scroll offscreen... it's a little ugly, but I
		 didn't think position: fixed and margin hacks would go down any more nicely...
	*/
	position: sticky;
	top: 0;
	background-color: var(--color-background-lighter);

	/* margin-left and margin-right can counterbalance the .ui-treeview padding here */
	margin-left: -1px;
	margin-right: -1px;
	padding-left: 1px;
	padding-right: 1px;
}

[id^='ui-treeview-search-input'] {
	width: 100%;
	box-sizing: border-box;
}

#__MENU__.ui-treeview {
	min-height: min-content;
}

.ui-treeview * {
	border-radius: initial;
}

.jsdialog:not(.sidebar).ui-treeview {
	max-height: 150px; /* only in dialogs */
}

.ui-treeview.disabled,
.ui-treeview-entry div.disabled,
.ui-treeview-entry.disabled {
	background-color: var(--color-background-dark) !important;
	color: var(--color-text-lighter) !important;
	pointer-events: none;
}

#custom_animation_label_parent {
	display: block;
	width: inherit;
}

.ui-treeview.empty {
	color: var(--color-text-lighter);
}

.ui-treeview-cell.with-sub-dialog {
	cursor: context-menu;
}

.ui-treeview-expandable.collapsed + .ui-treeview-expanded-content {
	display: none !important;
}

/* real tree requires spacing - inline-flex, headers require synchronized grid */
.ui-treeview:not(.ui-treeview-tree) .ui-treeview-entry {
	display: grid;
	grid-template-columns: subgrid;
}

.ui-treeview.ui-treeview-tree .ui-treeview-entry {
	display: inline-flex;
	width: 100%;
}

.ui-treeview-entry,
.ui-treeview-expanded-content {
	grid-auto-flow: column;
	/* grid-column: '1 / ' + (this._columns + 1) - set inside JS */
	justify-content: stretch;
	align-items: start;
	white-space: nowrap;
}

.ui-treeview-image {
	outline: 1px solid var(--color-btn-border);
	vertical-align: middle;
}

/* that rule is for custom rendering like font previews */
.ui-treeview-entry img.ui-treeview-image {
	border: 1px solid transparent;
	max-height: 24px; /* required for hidpi*/
}

#ServerAuditDialog .ui-treeview-entry {
	display: grid;
	grid-template-columns: var(--btn-img-size-m) 6fr 3fr;
	white-space: normal;
}

#ServerAuditDialog .ui-treeview-entry .ui-treeview-rowheader {
	min-width: 0;
	background-color: transparent;
}

.ui-treeview-expanded-content {
	display: grid;
}
/* ... */

